libs/override_key_core/tests/errors/not_struct.rs
use override_key_derive::ApplyOverrides;

// Not a struct at all
#[derive(ApplyOverrides)]
enum BadEnum {
    A,
    B,
}

fn main() {}