libs/override_key_core/tests/errors/not_struct.stderr
error: ApplyOverrides can only be used on structs
 --> tests/errors/not_struct.rs:5:6
  |
5 | enum BadEnum {
  |      ^^^^^^^
